新增AI智能优化建议功能与相关文档支持
- 添加 `AI_OPTIMIZATION_GUIDE.md` 文件，提供AI智能优化建议功能的详细使用指南。
- 引入 `OptimizationContext` 模型类，汇总JVM分析的关键信息供AI深度优化。
- 新增 `ZGCInitConfig` 实体类，用于解析ZGC相关配置信息。
- 增加 `ZgcLogParserTest` 测试类，验证ZGC日志解析功能的准确性与完整性。
- 扩展后端API端点，支持智能GC优化建议（结构化数据）。
- 丰富GC日志分析，提升性能评估和优化建议的精度。